source/assets/stylesheets/_components.sponsors.scss
/* =Sponsors
===================================================== */

.wcorg-sponsors {

  > div {

    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    text-align: center;
    align-items: center;

  }

  > div h2 {
    width: 100%;
    margin-top: $unit-default;
    margin-bottom: $unit-default;

    padding-top: $unit-default;
    border-top: 1px solid $color-border-weak;

    font-size: ms(2);
    text-align: left;

  }

}

.wcorg-sponsor {

  margin-bottom: 0;
  padding: $unit-xs;

  img {

    display: block;
    margin: 0 auto;
    max-height: rem(140);

  }

  h3,
  .wcorg-sponsor-description p {

    display: none;

  }

  a {

    background-color: #fff;

    img {

      @include transition-fast();

    }

    &:hover img,
    &:focus img,
    &:active img {

      filter:  grayscale(100%);
      // filter:  sepia(100%);
      opacity: .75;

    }

  }

  @include breakpoint(medium) {

    padding: $unit-s;

    img {

      max-height: rem(200);

    }

  }

}

// Large
.wcorg-sponsor-level-gold {

  @include clearfix();

  .wcorg-sponsor {

    width: percentage(1/1);

    @include breakpoint(small) {

      width: percentage(1/2);

    }

    @include breakpoint(medium) {

      width: percentage(1/3);

    }

  }

}

// Medium
.wcorg-sponsor-level-silver {

  @include clearfix();

  .wcorg-sponsor {

    width: percentage(1/2);

    @include breakpoint(medium) {

      width: percentage(1/4);

    }

  }

}

// Small
.wcorg-sponsor-level-bronze {

  @include clearfix();

  .wcorg-sponsor {

    width: percentage(1/3);

    @include breakpoint(medium) {

      width: percentage(1/5);

    }

  }

}

// Tiny
.wcorg-sponsor-level-micro {

  @include clearfix();

  .wcorg-sponsor {

    width: percentage(1/3);

    @include breakpoint(medium) {

      width: percentage(1/6);

    }

  }

}

// Hide
.wcorg-sponsor-level-community-summit-individual,
.wcorg-sponsor-level-community-summit-gold,
.wcorg-sponsor-level-community-summit-silver,
.wcorg-sponsor-level-community-summit-bronze {

  display: none!important;

}

// Sponsor widget (in footer)
.wcb_widget_sponsors {
  display: flex;
  flex-wrap: wrap;
  flex-basis: 100%;
  justify-content: space-between;
  align-items: flex-start;

  .widget-title { // "proudly sponsored by.."
    flex-basis: 100%;
    padding-bottom: $unit-default;
    font-size: ms(3);
  }

  .sponsor-level {
    // Basic styles
    display: flex;
    flex-wrap: wrap;
    flex-basis: 100%;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
    padding-bottom: $unit-l;
    margin-left: -10px;
    margin-right: -10px;

    .sponsor-level-title {
      // Sponsor level title.
      text-align: left;
      flex-basis: 100%;
      font-size: ms(0);
      padding: 0 10px;
    }

    a.sponsor-logo {
      // Anchor
      display: block;
      padding: 10px;
      flex-basis: 50%;

      img.wp-post-image {
        // sponsor image
        max-width: 100%;
        height: auto;
        display: block;
        margin: 0 auto;
        filter: grayscale(100%);
        opacity: 0.5;
        transition: all ease-out 300ms;
      }

      &:hover, &:focus {
        img.wp-post-image {
          filter: grayscale(0);
          opacity: 1;
          transition: all ease-out 100ms;
        }
      }
    }

    &.gold {
      a.sponsor-logo {
        flex-basis: 33%;
      }
    }

    &.silver {
      a.sponsor-logo {
        flex-basis: 25%;
      }
    }

    &.bronze {
      a.sponsor-logo {
        flex-basis: 20%;
      }
    }

    &.micro {
      display: none;
    }

    @include breakpoint(medium) {
      &.gold {
        //flex-basis: 60%;
        //padding-right: $unit-default;
      }

      &.silver {
        //flex-basis: 40%;
      }

      &.bronze {
        a.sponsor-logo {
          flex-basis: 16.66%;
        }
      }
    }
  }
}

